# spinners

./: .gitignore  Cargo.toml  README.md
examples/: cycle.rs  simple.rs  stop_persist.rs  stop_symbol.rs  timer.rs
src/: lib.rs  spinner.rs  stream.rs  variants.rs
src/utils/: mod.rs  spinners.rs  stream.rs
